--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ xlrd~=1.2.0
 pandas~=1.1.3
 openpyxl
 
-flask_sqlalchemy~=2.4.4
+flask-sqlalchemy~=2.4.4
 Werkzeug~=1.0.1
 numpy~=1.16.2
 
 #not on cse machine
-flask_restx 
+flask-restx
 pyjwt~=1.7.1
 google-api-python-client
 google-auth-httplib2
