--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f pip_requirements.txt ]; then pip install -r pip_requirements.txt; fi
     - name: Run the package script
       run: |
         python setup.py sdist bdist_wheel
