--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,6 +34,8 @@ jobs:
 
     - name: Commit build files
       run:
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
         git commit -m "Build distribution" -a
 
     - name: GitHub Push
