--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Commit build files
       run:
-        git config --local user.email "action@github.com"
+        git config --local user.email "khan.schroderturner@gmail.com"
         git config --local user.name "GitHub Action"
         git commit -m "Build distribution" -a
 
