Fixing action bug

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -34,16 +35,17 @@ jobs:
 
     - name: Commit build files
       run:
-        git config --local user.email
-        git config --local user.name
+        git config --global user.name 'Github Action'
+        git config --global user.email 'KhanMechAI@users.noreply.github.com'
         git commit -m "Build distribution" -a
+        git push
 
-    - name: GitHub Push
-      uses: ad-m/github-push-action@v0.6.0
-
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
+#    - name: GitHub Push
+#      uses: ad-m/github-push-action@v0.6.0
+#
+#    - name: Push changes
+#      uses: ad-m/github-push-action@master
+#      with:
+#        github_token: ${{ secrets.GITHUB_TOKEN }}
+#        branch: ${{ github.ref }}
 
