--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,8 +35,8 @@ jobs:
 
     - name: Commit build files
       run:
-        git config --global user.name 'Github Action'
-        git config --global user.email 'KhanMechAI@users.noreply.github.com'
+        git config --global user.name "Github Action"
+        git config --global user.email "KhanMechAI@users.noreply.github.com"
         git commit -m "Build distribution" -a
         git push
 
