--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ flask>=1.1.2
 xlrd>=1.2.0
 pandas>=1.1.3
 openpyxl
-finnhub-python
+# finnhub-python
 flask-sqlalchemy>=2.4.4
 flask-cors>=3.0.9
 Werkzeug>=1.0.1
