--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,9 @@ flask-cors>=3.0.9
 Werkzeug>=1.0.1
 numpy>=1.16.2
 pyyaml
-#yaml
-#not on cse machine
 flask-restx
 pyjwt>=1.7.1
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+requests
