--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,10 +28,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements.txt ]; then pip install -r requirements.txt;
+
     - name: Run the package script
       run: |
         python setup.py sdist bdist_wheel
+
+    - name: Run the package script
+      run: |
+        python setup_db.py
 
     - name: Commit build files
       run: |
