--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,13 +28,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt;
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run the package script
       run: |
         python setup.py sdist bdist_wheel
 
-    - name: Run the package script
+    - name: Run the database setup
       run: |
         python setup_db.py
 
