--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Install applciation
       run: |
-        pip install dist\simvestr-0.0.1.tar.gz
+        pip install dist/simvestr-0.0.1.tar.gz
 
     - name: Test with pytest
       run: |
