--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest -v -h
+        pytest -v -h test/
 
     - name: Commit build files
       run: |
