--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -45,6 +45,8 @@ jobs:
 
     - name: Commit build files
       run: |
+        git add dist/simvestr-1.0.0.tar.gz
+        git add dist/simvestr-1.0.0-py3-none-any.whl
         git config --global user.name "Github Action"
         git config --global user.email "KhanMechAI@users.noreply.github.com"
         git commit -am "Build distribution"
