--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,7 @@ on:
     branches: [ dev ]
 
 jobs:
-  build:
+  pull:
 
     runs-on: ubuntu-latest
     strategy:
@@ -30,14 +30,15 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Run the package script
-      run: |
-        python setup.py sdist bdist_wheel
-
-
+  test:
     - name: Test with pytest
       run: |
         pytest
+
+  build:
+    - name: Run the package script
+        run: |
+          python setup.py sdist bdist_wheel
 
     - name: Install applciation
       run: |
