--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,11 +29,19 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
   test:
+    runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python-version: [ 3.7, ]
     needs: installation
     - name: Test with pytest
       run: |
         pytest
   build:
+    runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python-version: [ 3.7, ]
     needs: [installation, test]
     - name: Run the package script
       run: |
