--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,21 +30,32 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
   test:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         python-version: [ 3.7, ]
+
     needs: installation
+
+    steps:
     - name: Test with pytest
       run: |
         pytest
+
   build:
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         python-version: [ 3.7, ]
+
     needs: [installation, test]
+
+    steps:
     - name: Run the package script
       run: |
         python setup.py sdist bdist_wheel
